# Snow

./: CMakeLists.txt  MANIFEST.md  snow-bs.grc  top_block.py
apps/: CMakeLists.txt
docs/: CMakeLists.txt
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox
grc/: CMakeLists.txt  snow_demod.block.yml
include/snow/: CMakeLists.txt  api.h  demod.h
lib/: CMakeLists.txt  demod_impl.cc  demod_impl.h
python/: CMakeLists.txt  __init__.py  qa_demod.py
python/bindings/: CMakeLists.txt  demod_python.cc  python_bindings.cc
python/bindings/docstrings/: demod_pydoc_template.h
